2011-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  configure,
	  sdccconf_in.h,
	  src/SDCCmain.c,
	  src/SDCCglue.c,
	  src/SDCCopt.c,
	  src/port.h,
	  src/SDCCopt.c,
	  src/SDCCralloc.hpp,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/gen.c,
	  src/z80/ralloc.c:
	  Basic infrastructure for z180 port.

2011-09-02 Philipp Klaus Krause <pkk AT spth.de>

	* tests/bug3403429.c:
	  Regression test for bug 3403429.

2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use res instead of and to clear sign bit.

2011-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fsgt.c,
	* device/lib/_fslt.c: test for -0.0
	* src/ds390/gen.c (toBoolean),
	* src/hc08/gen.c (asmopToBool),
	* src/mcs51/gen.c (toBoolean),
	* src/z80/gen.c (_toBoolean): ignore sign of float,
	  (aopDump): disabled unused code
	* support/regression/tests/float_single.c: enabled floorf(1.0-0.000001),
	  added NEG
	* support/regression/tests/bug3183823.c: new, added

2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3401973.c:
	  Regression test for bug 3401973.

2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug1723128.c:
	  Disable failing regression test for hc08.

2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/hc08/gen.c,
	  src/SDCCast.c,
	  device/include/stdbool.h:
	  _Bool / bool for hc08.

2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/SDCCpeeph.c:
	  Minor code cleanup.

2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi:
	  dont't include readline5.dll in 64bit package;
	  remove libgcc_s_sjlj-1.dll and libstdc++-6.dll on uninstallation;
	  don't install 64 bit version on 32 bit Windows;
	  use proper Program Files and registry for 64 bit installation